Second os commit

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     <p>Example: While playing movie on a device the audio and video are controlled by different threads in background.
     </p>
     <h3> Why do we need thread?</h3>
+    <ol>
+        <li>Since thread use the same data and code, the operational cost is low in thread.</li>
+        <li>Creating and terminating thread is faster compared to creating or terminating a process.</li>
+        <li>Context switching is faster compared to processes.</li>
+        <li>Thread improve CPU utilization, reducing idle time.</li>
+        <li>Threads communicate easily via shared memory.</li>
+    </ol>
     <p></p>
 </body>
 
